# AgenticAI

./: 01 - Introduction.md  02 - Google Drive for Desktop.md  02_Asyncio_and_OpenAI_Agents.ipynb  03 - VSCode Setup.md  04 - Dot Env.md  05 - UV Setup.md  06 - Exploring_LLMs.ipynb  06_Exploring_LLMs.ipynb  08 - Asyncio_and_Financial_Agent.ipynb  08_Asyncio_and_Financial_Agent.ipynb  09 - Pydantic_AI.ipynb  09_Pydantic_AI.ipynb  10 - LangChain.md  11 - LangGraph.ipynb  11 - LangGraph.md  11_LangGraph.ipynb  12 - AutoGen.md  14 - MCP.md  README.md  chat.py  financial_agent.ipynb  pyproject.toml  test.py
01 - Getting Started/: 01 - Getting_Started_Analysis.md  02 - Getting_Started_Glossary.md  03 - Getting_Started_Lab_Guide.md
02 - The Cognitive Interface/: 01 - Agentic_AI_Glossary.md  02 - Exploring_LLMs_Analysis.md
03 - Asynchronous Programming & Structured Output/: 01_glossary.md  02_instructor_demo.md  03_lab.md
04 - The Tooling Standard (MCP)/: 01_MCP_glossary.md  02_MCP_instructor_demo.md  03_MCP_lab.md  03_MCP_student_lab.md
05 - Memory and Retrieval (LangChain)/: 01_glossary.md  02_instructor_demo.md  03_student_lab.md
06 - Graph-Based Control Flow (LangGraph)/: 01_glossary.md  02_demo.md  03_lab.md
07 - Code-as-Action (SmolAgents)/: 01 - glossary.md  02 - demo.md  03 - lab.md
08 - Role-Based Teams (CrewAI)/: 01_glossary.md  02_demo.md  03_lab.md
09 - Conversational Swarms (AutoGen)/: 01_glossary.md  02_demo.md  03_lab.md
10 - Task Decomposition & Planning/: 01 - glossary.md  02 - demo.md  03 - lab.md
Week 02 - The Cognitive Interface/: 01 - Agentic_AI_Glossary.md  03 - Exploring_LLMs_Lab_Guide.md  Agentic_AI_Glossary.md  Exploring_LLMs_Analysis.md  Exploring_LLMs_Lab_Guide.md  Notebook_Analysis_Summary.md
files/: 06 - Exploring_LLMs.ipynb  07 - CrewAI.md  10 - LangChain.md  13 - SmolAgents.md  chat.py  env_variables.py  main.py  test.py
