[project]
name = "agents-playground"
version = "0.1.0"
description = "A playground for experimenting with AI agents and related technologies."
readme = "README.md"
requires-python = ">=3.10, <3.13"
dependencies = [
    "accelerate>=0.20.0",
    "anthropic>=0.49.0",
    "autogen-agentchat>=0.4.9.2",
    "autogen-ext[grpc,mcp,ollama,openai]>=0.4.9.2",
    "bs4>=0.0.2",
    "chromadb>=0.5.4",
    "diffusers>=0.30.0",
    "gradio>=5.22.0",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.5",
    "langchain>=0.3.18", 
    "langchain-anthropic>=0.3.10",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.28",
    "langchain-experimental>=0.3.4",
    "langchain-openai>=0.3.9",
    "langchain-text-splitters>=0.3.4",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langsmith>=0.3.18",
    "logfire>=0.2.1",
    "lxml>=5.3.1",
    "matplotlib>=3.8.0",
    "mcp-server-fetch>=2025.1.17",
    "mcp[cli]>=1.5.0",
    "neo4j>=5.11.0",
    "nest-asyncio>=1.5.6",
    "networkx>=3.3",
    "openai>=1.68.2",
    "openai-agents>=0.0.15",
    "opencv-python>=4.8.0",
    "playwright>=1.51.0",
    "plotly>=6.0.1",
    "polygon-api-client>=1.14.5",
    "psutil>=7.0.0",
    "py2neo>=2021.2.4",
    "pydantic>=2.7.5",
    "pydantic-ai>=0.1.6",
    "pypdf>=5.4.0",
    "pypdf2>=3.0.1",
    "python-dotenv>=1.0.1",
    "requests>=2.32.5",
    "safetensors>=0.4.0",
    "semantic-kernel>=1.25.0",
    "sendgrid>=6.11.0",
    "sentence-transformers>=3.3.1",
    "setuptools>=78.1.0",
    "smithery>=0.1.0",
    "smolagents[toolkit]>=0.1.7",
    "speedtest-cli>=2.1.3",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.37.4",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu121"
priority = "supplemental"
explicit = true